kubernetes/apps/ai/bifrost/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bifrost
spec:
  hostnames:
    - ai.labx.sh
    - bifrost.labx.sh
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: bifrost
          port: 8080
